--- a/refs.bib
+++ b/refs.bib
@@ -37,6 +37,7 @@
 	author = {Abraham, Ralph and Marsden, Jerrold E. and Ratiu, Tudor},
 	copyright = {http://www.springer.com/tdm},
 	doi = {10.1007/978-1-4612-1029-0},
+	editor = {Marsden, J. E. and Sirovich, L. and John, F.},
 	file = {Full Text:/Users/vipulsinghal/Zotero/storage/N4Z2JMJD/Abraham et al. - 1988 - Manifolds, Tensor Analysis, and Applications.pdf:application/pdf},
 	isbn = {978-1-4612-6990-8 978-1-4612-1029-0},
 	keywords = {calculus, compactness, Derivative, Electromagnetism, exterior derivative, Hodge star operator, Implicit function, manifold, Riemannian geometry},
